Lesson-5/Lesson-7/statefullset.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: prometheus
spec:
  serviceName: prometheus
  replicas: 1
  selector:
    matchLabels:
      app: prometheus
  template:
    metadata:
      labels:
        app: prometheus
    spec:
      serviceAccount: prometheus
      containers:
        - name: prometheus-k8s
          image: prom/prometheus:v2.19.2
          ports:
            - name: admin
              protocol: TCP
              containerPort: 9090
          volumeMounts:
            - name: config-volume
              mountPath: /etc/prometheus
￼           - name: data
￼             mountPath: /prometheus
￼     volumes:
￼       - name: config-volume
￼         configMap:
￼           name: my-configmap
￼ volumeClaimTemplates:
￼   - metadata:
￼       name: data
￼     spec:
￼       accessModes: ["ReadWriteOnce"]
￼       resources:
￼         requests:
￼           storage: 5Gi
￼       storageClassName: csi-ceph-hdd-gz1-retain
