Lesson-5/Lesson-7/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
spec:
￼ defaultBackend:
￼   service:
￼     name: prome
￼     port:
￼       number: 9090
